# MangoEngine

./: .gitmodules  CMakeLists.txt  README.md
MangoEditor/: CMakeLists.txt
MangoEditor/src/: main.cpp
MangoEngine/: CMakeLists.txt
MangoEngine/include/MangoEngine/: MangoEngine.hpp  commons.hpp  entry.hpp
MangoEngine/include/MangoEngine/core/: application.hpp  event.hpp  input.hpp  logger.hpp  window.hpp
MangoEngine/include/MangoEngine/ecs/: ecs.hpp
MangoEngine/include/MangoEngine/imgui/: imgui_renderer.hpp
MangoEngine/include/MangoEngine/render/: command.hpp  render.hpp  texture.hpp
MangoEngine/include/MangoEngine/render/camera/: camera.hpp  orthographic_camera.hpp
MangoEngine/include/MangoEngine/render/imgui/: imgui_renderer.hpp
MangoEngine/platform/vulkan/: vulkan_imgui_backend.cpp  vulkan_imgui_backend.hpp  vulkan_render.cpp
MangoEngine/platform/xcb/: xcb_window.cpp  xcb_window.hpp
MangoEngine/platform/xcb/src/core/: xcb_window.cpp
MangoEngine/src/: commons.cpp
MangoEngine/src/core/: event.cpp  input.cpp  logger.cpp  transforms.cpp  window.cpp
MangoEngine/src/imgui/: imgui_renderer.cpp
MangoEngine/src/render/: command.cpp  render.cpp  texture.cpp
MangoEngine/src/render/camera/: camera.cpp  orthographic_camera.cpp
MangoEngine/src/render/imgui/: imgui_renderer.cpp
Sandbox/: CMakeLists.txt  main.cpp
assets/shaders/: builtin-quad_shader.frag  builtin-quad_shader.vert
